--- a/d/willows-a-dream-of-shadows.html
+++ b/d/willows-a-dream-of-shadows.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/icons/boxicons/fonts/transformations.css">
 
   <link rel="stylesheet" href="assets/icons/fontawesome/css/all.css">
-
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="assets/icons/lineicons/css/icons.css">
 
   <script src="assets/icons/custom/090ca49637.js"></script>
@@ -9376,3 +9376,4 @@
                   </div> -->
                 </div>
             </div></body></html>
+
