--- a/d/willows-a-dream-of-shadows.html
+++ b/d/willows-a-dream-of-shadows.html
@@ -43,7 +43,7 @@
          <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[50px]">
            <div class="w-full flex flex-row justify-between items-center py-2 gap-4">
              <div class="flex flex-row">
-               <a href="./index.html" class="opacity-[0.5] transition-all ease duration-[0.3s] hover:opacity-[1]">
+               <a href="../" class="opacity-[0.5] transition-all ease duration-[0.3s] hover:opacity-[1]">
                  <img class="" src="">
                  <div class="flex flex-col gap-1">
                    <p class="flex flex-col text-[25px] font-bold">DEGA</p>
@@ -62,10 +62,10 @@
          <div id="affectedSwap-mobileNav-1" class="w-full flex flex-col bg-SoftBlack">
            <div class="w-full h-full flex flex-col">
              <div class="w-full bg-gradient-to-tr from-LBlue/20 to-LBlueLight/40 min-h-[50px] px-2 flex flex-row justify-center items-center shadow-sm lg:hidden">
-               <a class="opacity-[0.5] transition-all ease duration-[0.3s] hover:opacity-[1]" href="index.html">
+               <a class="opacity-[0.5] transition-all ease duration-[0.3s] hover:opacity-[1]" href="../">
                  <img class="" src="">
                  <div class="flex flex-col gap-1">
-                   <p class="flex flex-col text-[20px] font-bold">DEGA <span class="text-[17px] mt-[-9px]">STORE</span></p>
+                   <p class="flex flex-col text-[20px] font-bold">DEGA</p>
                  </div>
                </a>
                <div class="grow-[1] flex flex-row justify-end">
@@ -197,7 +197,7 @@
                           </div>
                           <div class="w-full flex flex-row justify-between items-center gap-4 p-4 flex-wrap bg-black/25 max-md:flex-col">
                             <p class="text-sm text-white/50">Demo available</p>
-                            <a href="game-demo.html" class="py-2 px-4 gap-2 bg-LBlue rounded-sm flex flex-row justify-center items-center text-white/50 border-LBlue transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white/75 max-md:w-full">
+                            <a href="#" class="py-2 px-4 gap-2 bg-LBlue rounded-sm flex flex-row justify-center items-center text-white/50 border-LBlue transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white/75 max-md:w-full">
                       <i class="fa-solid fa-download" aria-hidden="true"></i>
                       <p class="font-semibold text-sm">Download Demo</p>
                     </a>
@@ -5857,7 +5857,7 @@
                       <i class="fa-solid fa-pizza-slice" aria-hidden="true"></i>
                       <p class="">Demo available to download and play</p>
                     </div>
-                    <a href="game-demo.html" class="py-2 px-4 w-full gap-2 bg-LBlue rounded-sm flex flex-row justify-center items-center text-white/50 border-LBlue transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white/75 max-md:w-full">
+                    <a href="#" class="py-2 px-4 w-full gap-2 bg-LBlue rounded-sm flex flex-row justify-center items-center text-white/50 border-LBlue transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white/75 max-md:w-full">
                       <i class="fa-solid fa-download" aria-hidden="true"></i>
                       <p class="font-semibold text-sm">Download Demo</p>
                     </a>
@@ -6203,13 +6203,13 @@
                  <div class="opacity-[0.5] transition-all ease duration-[0.3s] hover:opacity-[1]">
                    <img class="" src="">
                    <div class="flex flex-col gap-1">
-                     <p class="flex flex-col text-[25px] font-bold">DEGA <span class="text-[21px] mt-[-10px]">STORE</span></p>
+                     <p class="flex flex-col text-[25px] font-bold">DEGA</p>
                    </div>
                  </div>
                </div>
                <div class="grow-[1] flex flex-col gap-2 flex-wrap text-white/75">
                  <div class="w-full flex flex-row flex-wrap gap-4 flex-wrap text-white/50 justify-center items-center">
-                   <a class="transition-all ease duration-[0.3s] hover:text-white" href="./index.html">About</a>
+                   <a class="transition-all ease duration-[0.3s] hover:text-white" href="../">About</a>
 
 
 
@@ -6228,7 +6228,7 @@
              <div class="w-full flex flex-row justify-center items-center text-white/50 pt-4 border-t border-white/10">
                <p class="">Copyright © <script>
                    document.write(new Date().getFullYear());
-                 </script> <a href="index.html" target="_blank" class="font-bold transition-all ease duration-[0.4s] hover:text-white">DEGA</a> All Rights Reserved.</p>
+                 </script> <a href="../" target="_blank" class="font-bold transition-all ease duration-[0.4s] hover:text-white">DEGA</a> All Rights Reserved.</p>
              </div>
            </div>
          </div>
@@ -6274,7 +6274,7 @@
 
          <div class="w-full flex-row justify-center items-center bg-SoftBlack/50">
            <div style="-ms-overflow-style: none; scrollbar-width: none;" class="w-full flex flex-row gap-1 text-xl bg-gradient-to-tr from-LBlueDark/40 to-LBlueLight/60 p-2 backdrop-blur-md overflow-x-auto">
-             <a href="index.html" class="grow-[1] flex flex-row justify-center items-center rounded-sm py-2 px-2 text-white/50 transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white">
+             <a href="../" class="grow-[1] flex flex-row justify-center items-center rounded-sm py-2 px-2 text-white/50 transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white">
                <i class="bx bxs-home-alt-2 transition-all ease duration-[0.3s]"></i>
              </a>
              <button secondarynavselector="search" class="grow-[1] flex flex-row justify-center items-center rounded-sm py-2 px-2 text-white/50 transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white">
@@ -9376,4 +9376,3 @@
                   </div> -->
                 </div>
             </div></body></html>
-
