--- a/d/willows-a-dream-of-shadows.html
+++ b/d/willows-a-dream-of-shadows.html
@@ -35,8 +35,7 @@
        <!-- Nav start -->
        <div class="w-full bg-purple-600/20 min-h-[50px] px-2 flex flex-row justify-center items-center shadow-sm max-lg:hidden">
          <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[50px] py-2">
-           <p class="text-sm text-white/50">DEGA is still under development. What's you're seeing right now isn't even pre-alpha. Check out the main temporary page and/or talk with us at @DEGAStoreX on TwiX</p>
-
+           <p class="text-sm text-white/50">DEGA is still under development. What's you're seeing right now isn't even pre-alpha. Check out the main temporary page and/or talk with us at <a href="https://x.com/DEGAStoreX" target="_blank">@DEGAStoreX on TwiX</a></p>
          </div>
        </div>
        <div class="w-full bg-gradient-to-tr from-LBlue/20 to-LBlueLight/40 min-h-[50px] px-2 flex flex-row justify-center items-center shadow-sm max-lg:hidden">
@@ -58,6 +57,11 @@
 
 
        <!-- Nav mobile start -->
+       <div class="w-full bg-purple-600/20 min-h-[50px] px-2 flex flex-row justify-center items-center shadow-sm max-lg:hidden">
+         <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[50px] py-2">
+           <p class="text-sm text-white/50">DEGA is still under development. What's you're seeing right now isn't even pre-alpha. Check out the main temporary page and/or talk with us at <a href="https://x.com/DEGAStoreX" target="_blank">@DEGAStoreX on TwiX</a></p>
+         </div>
+       </div>
        <div class="w-full flex flex-col">
          <div id="affectedSwap-mobileNav-1" class="w-full flex flex-col bg-SoftBlack">
            <div class="w-full h-full flex flex-col">
@@ -6243,62 +6247,6 @@
        <!-- Secondary navigation start -->
 
        <!-- Secondary navigation end -->
-
-       <!-- Secondary navigation mobile start -->
-       <div secondarynavwrapper="" class="w-full hidden flex-col justify-center items-center gap-1 max-sm:flex z-[85]">
-
-         <div secondarynavshow="search" class="w-full absolute bottom-14 flex flex-row px-2 transition-all ease duration-[0.3s]" style="opacity: 0; transform: translateY(50px) scale(0.9);">
-           <div class="grow-[1] bg-SoftBlack/50 rounded-sm shadow-md overflow-hidden backdrop-blur-md">
-             <div class="grow-[1] flex flex-row overflow-x-auto gap-2 text-xs rounded-sm shadow-md bg-gradient-to-tr from-LBlueDark/40 to-LBlueLight/60 p-2 backdrop-blur-md overflow-hidden" style="-ms-overflow-style: none; scrollbar-width: none;">
-               <a href="search.html" class="grow-[1] flex flex-row gap-2 items-center justify-center rounded-sm p-2 text-white/50 transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white">
-                 <i class="bx bxs-joystick transition-all ease duration-[0.3s]"></i>
-               </a>
-               <a href="search.html" class="grow-[1] flex flex-row gap-2 items-center justify-center rounded-sm p-2 text-white/50 transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white">
-                 <i class="fa-solid fa-pizza-slice transition-all ease duration-[0.3s]" aria-hidden="true"></i>
-               </a>
-               <a href="search.html" class="grow-[1] flex flex-row gap-2 items-center justify-center rounded-sm p-2 text-white/50 transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white">
-                 <i class="bx bxs-vial-alt transition-all ease duration-[0.3s]"></i>
-               </a>
-               <a href="search.html" class="grow-[1] flex flex-row gap-2 items-center justify-center rounded-sm p-2 text-white/50 transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white">
-                 <i class="fa-solid fa-screwdriver-wrench transition-all ease duration-[0.3s]" aria-hidden="true"></i>
-               </a>
-               <a href="search.html" class="grow-[1] flex flex-row gap-2 items-center justify-center rounded-sm p-2 text-white/50 transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white">
-                 <i class="fa-solid fa-jar transition-all ease duration-[0.3s]" aria-hidden="true"></i>
-               </a>
-               <a href="search.html" class="grow-[1] flex flex-row gap-2 items-center justify-center rounded-sm p-2 text-white/50 transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white">
-                 <i class="fa-solid fa-newspaper transition-all ease duration-[0.3s]" aria-hidden="true"></i>
-               </a>
-             </div>
-           </div>
-         </div>
-
-         <div class="w-full flex-row justify-center items-center bg-SoftBlack/50">
-           <div style="-ms-overflow-style: none; scrollbar-width: none;" class="w-full flex flex-row gap-1 text-xl bg-gradient-to-tr from-LBlueDark/40 to-LBlueLight/60 p-2 backdrop-blur-md overflow-x-auto">
-             <a href="../" class="grow-[1] flex flex-row justify-center items-center rounded-sm py-2 px-2 text-white/50 transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white">
-               <i class="bx bxs-home-alt-2 transition-all ease duration-[0.3s]"></i>
-             </a>
-             <button secondarynavselector="search" class="grow-[1] flex flex-row justify-center items-center rounded-sm py-2 px-2 text-white/50 transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white">
-               <i class="bx bxs-search transition-all ease duration-[0.3s]"></i>
-             </button>
-             <a href="library.html" class="grow-[1] flex flex-row justify-center items-center rounded-sm py-2 px-2 text-white/50 transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white">
-               <i class="bx bxs-joystick transition-all ease duration-[0.3s]"></i>
-             </a>
-             <a href="" class="grow-[1] flex flex-row justify-center items-center rounded-sm py-2 px-2 text-white/50 transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white">
-               <i class="bx bxs-arrow-in-down-square-half transition-all ease duration-[0.3s]"></i>
-             </a>
-             <a href="" class="grow-[1] flex flex-row justify-center items-center rounded-sm py-2 px-2 text-white/50 transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white">
-               <i class="bx bxs-table-list transition-all ease duration-[0.3s]"></i>
-             </a>
-             <a href="" class="grow-[1] flex flex-row justify-center items-center rounded-sm py-2 px-2 text-white/50 transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white">
-               <i class="bx bxs-bell transition-all ease duration-[0.3s]"></i>
-             </a>
-             <a href="" class="grow-[1] flex flex-row justify-center items-center rounded-sm py-2 px-2 text-white/50 transition-all ease duration-[0.3s] hover:bg-LBlueLight active:bg-LBlueDark hover:text-white">
-               <i class="bx bxs-group transition-all ease duration-[0.3s]"></i>
-             </a>
-           </div>
-         </div>
-       </div>
-       <!-- Secondary navigation mobile end -->
 
 
   <!-- popups start -->
