--- a/d/willows-a-dream-of-shadows.html
+++ b/d/willows-a-dream-of-shadows.html
@@ -57,7 +57,7 @@
 
 
        <!-- Nav mobile start -->
-       <div class="w-full bg-purple-600/20 min-h-[50px] px-2 flex flex-row justify-center items-center shadow-sm max-lg:hidden">
+       <div class="w-full bg-purple-600/20 min-h-[50px] px-2 flex flex-row justify-center items-center shadow-sm lg:hidden">
          <div class="w-full max-w-[1400px] px-2 flex flex-col justify-center items-center min-h-[50px] py-2">
            <p class="text-sm text-white/50">DEGA is still under development. What's you're seeing right now isn't even pre-alpha. Check out the main temporary page and/or talk with us at <a href="https://x.com/DEGAStoreX" target="_blank">@DEGAStoreX on TwiX</a></p>
          </div>
