--- a/d/willows-a-dream-of-shadows.html
+++ b/d/willows-a-dream-of-shadows.html
@@ -119,7 +119,7 @@
                     <div cusgallerybox-selector="" class="w-full flex flex-row gap-4 bg-LBlue/10 backdrop-blur-sm py-0 overflow-x-auto overflow-y-hidden h-0 shadow-[0_0_8px_rgba(0,0,0,0.5)] transition-all ease duration-[0.4s] group-hover:flex group-hover:h-[131.5px] group-hover:p-4">
                       <div data-cusgallerybox-videoitem="https://www.youtube.com/watch?v=dSH7f70sZo0" class="relative min-w-[150px] cursor-pointer group transition-all ease duration-[0.3s] rounded-sm overflow-hidden border-2 border-LBlue/0">
                         <div class="absolute relative aspect-[16/9] shadow-sm inset-0 bg-white/10 flex flex-col justify-center items-center">
-                          <img src="https://image.nostr.build/0e6b43e529c3fdd294bef59beb9f3f0de0e2446040c4710d167fceb207866d2a.jpg" class="h-full object-contain transition-all ease duration-[0.3s] hover:scale-[1.03]">
+                          <img src="https://image.nostr.build/b81fd84f43d1dc4ad3bb7717350b5be2de8a7f1c4c9f963e2bdc41ac114b25d7.png" class="h-full object-contain transition-all ease duration-[0.3s] hover:scale-[1.03]">
                           <div class="w-full h-full absolute inset-0 flex flex-row justify-center items-center bg-black/50 backdrop-blur-sm text-4xl text-white/50 transition-all ease duration-[0.3s] hover:text-white">
                             <i class="bx bx-play-circle"></i>
                           </div>
@@ -163,7 +163,7 @@
 
                       <div class="w-full flex flex-col gap-2">
                         <div class="w-full flex flex-row relative aspect-[16/9] overflow-hidden rounded-sm shadow-md">
-                          <img src="https://image.nostr.build/0e6b43e529c3fdd294bef59beb9f3f0de0e2446040c4710d167fceb207866d2a.jpg" class="absolute inset-0 object-cover">
+                          <img src="https://image.nostr.build/b81fd84f43d1dc4ad3bb7717350b5be2de8a7f1c4c9f963e2bdc41ac114b25d7.png" class="absolute inset-0 object-cover">
                         </div>
                       </div>
 
@@ -854,7 +854,7 @@
                      <input type="text" disabled="" class="w-full min-w-[50px] bg-white/0 py-1 px-2 border-2 border-white/10 transition-all ease duration-[0.3s] focus:outline-0 truncate max-xs:border-r-2 max-xs:border-b-0" placeholder="npub/nprofile..." value="npub1m4fx9vexxm90tecax460fdyaz56th3vvxvcnvv7fq2pzetrjdnhqr4k3wl">
                    </div>
                    <button popupaction="openBioPopup" class="rounded-sm p-2 border border-white/10 text-start text-sm text-white/50 overflow-hidden transition-all ease duration-[0.3s] hover:border-white/0 hover:shadow-md hover:bg-LBlue hover:text-white/75">
-                 <p class="line-clamp-3 min-h-[60px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                 <p class="line-clamp-3 min-h-[60px]">Graveyard Shift Productions is an Indie video game production company made up of international creatives working together to create and support indie development projects. The team was formed off of the success of working together on fan-mod projects that developed into a full production studio in 2025.</p>
                </button>
                  </div>
                </div>
@@ -1201,7 +1201,7 @@
                 <div class="w-full flex flex-col gap-6">
 
                   <div class="w-full flex flex-row">
-                    <p class="text-white/50">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                    <p class="text-white/50">Graveyard Shift Productions is an Indie video game production company made up of international creatives working together to create and support indie development projects. The team was formed off of the success of working together on fan-mod projects that developed into a full production studio in 2025.</p>
                   </div>
 
                 </div>
