--- a/d/willows-a-dream-of-shadows.html
+++ b/d/willows-a-dream-of-shadows.html
@@ -1205,7 +1205,7 @@
                       </button>
                     </div>
                     <div unhidetarget="altStores" class="w-full grid grid-cols-3 flex-wrap gap-2 p-2 bg-black/25 justify-start items-center">
-                      <a href="https://graveyardshiftproductions.itch.io/" target="_blank"
+                      <a href="https://graveyardshiftproductions.itch.io/willows-a-dream-of-shadows" target="_blank"
                         class="rounded-sm py-2 px-2 gap-4 flex flex-row justify-start text-white/50 justify-center items-center relative transition-all ease duration-[0.4s] hover:text-white/75 hover:bg-LBlueLight active:bg-LBlueDark max-md:w-full group">
                         <p class="font-semibold text-sm truncate">itch</p>
                         <i class="fa-solid fa-arrow-up-right-from-square text-xs opacity-[0] absolute top-1 right-1 transition-all ease duration-[0.3s] group-hover:opacity-[0.5]" aria-hidden="true"></i>
